--- a/esms.css
+++ b/esms.css
@@ -10,7 +10,7 @@ html {
     font-family: 'proxima_novaregular', sans-serif;
     scroll-behavior: smooth;
     letter-spacing: 3px;
-    background-image: url(/img/charte\ graphique.png);
+    background-image: url("./img/charte\ graphique.png");
     /* black */
     background-color: black;
     color: white;
@@ -631,6 +631,7 @@ body {
 #speakers .speakers .conference-speakers span.right-control {
     right: 0;
     cursor: pointer;
+    z-index: 20;
 }
 
 #speakers .speakers .conference-speakers span.left-control {
@@ -1051,49 +1052,49 @@ body {
 
 @font-face {
     font-family: 'proxima_nova_altlight';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_light-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_light-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_alt_light-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_nova_altthin';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_thin-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_thin-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_alt_thin-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_alt_thin-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_novablack';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_black-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_black-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_black-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_black-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_novabold';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_bold-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_bold-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_bold-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_novaextrabold';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_extrabold-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_extrabold-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_extrabold-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_extrabold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_novathin';
-    src: url('/fonts/webfontkit-20210222-033406/proxima_nova_thin-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_thin-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proxima_nova_thin-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proxima_nova_thin-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'proxima_novaregular';
-    src: url('/fonts/webfontkit-20210222-033406/proximanova-regular-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proximanova-regular-webfont.woff') format('woff');
+    src: url('./fonts/webfontkit-20210222-033406/proximanova-regular-webfont.woff2') format('woff2'), url('/fonts/webfontkit-20210222-033406/proximanova-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
